--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "nprogress": "^0.2.0",
         "vue": "^2.6.12",
+        "vue-infinite-loading": "^2.4.5",
         "vue-router": "^3.5.1",
         "vue-tweet-embed": "^2.4.0"
     }
