--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vue": "^2.6.12",
         "vue-infinite-loading": "^2.4.5",
         "vue-router": "^3.5.1",
+        "vue-social-sharing": "^3.0.7",
         "vue-tweet-embed": "^2.4.0",
         "vuex": "^3.6.2"
     }
