--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "nprogress": "^0.2.0",
         "vue": "^2.6.12",
         "vue-infinite-loading": "^2.4.5",
+        "vue-recaptcha-v3": "^1.9.0",
         "vue-router": "^3.5.1",
         "vue-social-sharing": "^3.0.7",
         "vue-tweet-embed": "^2.4.0",
