--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "atymic/twitter": "^3.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "google/recaptcha": "^1.2",
         "guzzlehttp/guzzle": "^7.0.1",
         "kirschbaum-development/eloquent-power-joins": "^2.4",
         "laravel/framework": "^8.12",
