--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "link-prevue": "^1.2.0",
         "nprogress": "^0.2.0",
         "vue": "^2.6.12",
         "vue-infinite-loading": "^2.4.5",
